finish Jena 5 move
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>